--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+    <style>
+        body {
+            font-family: helvetica;
+        }
+    </style>
     <body>
-        <p>Welcome to Modern house tech</p>
+        <img src="images/Modern house logo.png"/>
+        <p>Welcome to Modern house tech!</p>
     </body>
 </html>
