Added Ukraine support icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         }
     </style>
     <body>
-        <img src="images/Modern house logo.png"/>
+        <img src="images/Modern house logo.png"/><img src="images/moas-ukraine1.png" height="175px"/>
         <p>Welcome to Modern house tech!</p>
     </body>
 </html>
